# meteovache_pi

./: .gitignore  .gitignore.orig  .gitmodules  CMakeLists.txt  Compilation.txt  Plugin.cmake  README.md  build-conf.rc  config.h.in  update-templates
.circleci/: config.yml
build-deps/: control
buildwin/: win_deps.bat  win_deps.bat.orig
ci/: appveyor.bat  appveyor.bat.orig  build-debian.sh  build-ubuntu.sh  circleci-build-android.sh  circleci-build-buster-armhf.sh  circleci-build-buster.sh  circleci-build-debian-armhf.sh  circleci-build-debian-docker.sh  circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-macos.sh  circleci-build-ubuntu-armhf.sh  local-build.sh  travis-build-win32.sh
cmake/: Metadata.cmake  PluginCompiler.cmake  PluginConfigure.cmake  PluginInstall.cmake  PluginPackage.cmake  TemplateVersion  gpl.txt  wxWTranslateCatalog.h.in
files/: prefs.fbp  report.fbp
flatpak/: org.opencpn.OpenCPN.Plugin.meteovache.yaml
include/: ocpn_plugin.h
po/: POTFILES.in  de_DE.po  es_ES.po  fr_FR.mo  fr_FR.po  gen_pot.bat  gen_pot.sh  it_IT.po  meteovache_pi-es_ES.po  meteovache_pi.pot  pt_BR.po
src/: ColorGradient.cpp  ColorGradient.h  ConfigContainer.cpp  ConfigContainer.h  DateTime.cpp  DateTime.h  Forecast.cpp  Forecast.h  ForecastDisplay.cpp  ForecastDisplay.h  Icons.cpp  Icons.h  JobQueue.cpp  JobQueue.h  MVPrefDialog.cpp  MVPrefDialog.h  MVReportFrame.cpp  MVReportFrame.h  MeteoVacheClient.cpp  MeteoVacheClient.h  MeteoVachePlugin.cpp  MeteoVachePlugin.h  MeteoVacheThread.cpp  MeteoVacheThread.h  NetworkThread.cpp  NetworkThread.h  PointForecast.cpp  PointForecast.h  PreferenceDialog.cpp  PreferenceDialog.fbp  PreferenceDialog.h  PreferenceDialogBase.cpp  PreferenceDialogBase.h  RegionForecast.cpp  RegionForecast.h  ReportWindow.cpp  ReportWindow.fbp  ReportWindow.h  ReportWindowBase.cpp  ReportWindowBase.h  (+5 more)
